<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gitenter</groupId>
    <artifactId>gitenter-parent</artifactId>
    <version>0.0.2-prototype</version>
    <packaging>pom</packaging>

    <name>GitEnter Parent Project</name>

    <!-- Refer to the below sites for setting up parent POM:
        https://maven.apache.org/guides/mini/guide-multiple-modules.html
        http://maven.apache.org/guides/introduction/introduction-to-the-pom.html#Project_Inheritance
        https://books.sonatype.com/mvnex-book/reference/multimodule-sect-simple-parent.html
        Notice that here use path (so `../folder` and `nested/folder` both works)
        rather than `artifactId`.
    -->
    <modules>
        <!-- TODO:
            `capsid` depends on `hooks` but there's no garentee on maven compiling order as it
            is not a library dependency (`<dependency>` tag will not show it).
            Consider explicitly specify the dependency (if there's a way in maven). Or alternatively,
            using an approach different to setting up `<outputDirectory>` tag on `hooks/post-receive/pom.xml`.
            For example, compile hooks and set them somewhere on docker. Capsid can then just
            setup a symlink or something else to call the hook when it initialize a repository.
        -->
        <module>protease</module>
        <module>enzymark</module>
        <module>hooks</module>
        <module>capsid</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <gitar-version>0.0.3-prototype</gitar-version>
    </properties>

    <build>
        <!-- Difference between `plugins` and `pluginManagement`:
            http://maven.apache.org/pom.html#Plugin_Management
            https://stackoverflow.com/questions/10483180/maven-what-is-pluginmanagement
        -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>8</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <groupId>io.spring.javaformat</groupId>
                    <artifactId>spring-javaformat-maven-plugin</artifactId>
                    <version>0.0.15</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.28.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
